Fixed Navigation Bar overlapping banner.

--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,7 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
-  margin-top: 100px;
+  margin-top: 120px;
 }
 nav {
   display: flex;
